@@ -1,3 +1,15 @@
+2010-01-31  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Darin Adler.
+
+        Limit the scope of packing alignment to avoid MSVC C4103 warning.
+        https://bugs.webkit.org/show_bug.cgi?id=34390
+
+        Use pack(push, 16) and pack(pop) to limit the scope of packing
+        alignment change.
+
+        * bindings/js/JSSVGPODTypeWrapper.h:
+
 2010-01-31  Kent Tamura  <tkent@chromium.org>
 
         Reviewed by Darin Adler.
